# L4RPCH3KR

./: .gitignore  .vercelignore  DEPLOYMENT_CHECKLIST.md  README.md  STATUS.md  VERCEL_DEPLOYMENT.md  VERIFICATION.md  backup.archive  vercel.json
.claude/: settings.local.json.tmp.1428.1777701935346
backend/: .env.example  Makefile  RAILWAY_DEPLOYMENT.md  README.md  REVIEW.md  VERIFICATION.md  alembic.ini  migrate_mongodb.py  pyproject.toml  remove_flags.py  requirements.txt  test_db.py
backend/app/: auth.py  config.py  db.py  deps.py  environment.py  llm_keys.py  main.py  routers.py  schemas.py  serializers.py  ws_manager.py
backend/app/identity/: conversation_resolver.py  face_matcher.py  linkedin_scraper.py  name_extraction.py
backend/app/pipeline/: asr.py  compare.py  diarize.py  dot_jots.py  evaluate.py  extract.py  fixtures.py  orchestrator.py  score.py
backend/app/scripts/: generate_contracts.py  init_db.py  seed_event.py  send_test_message.py  sim_pi.py  verify_e2e.py
backend/tests/: test_dashboard_routes.py  test_e2e_pipeline.py  test_linkedin_scraper.py  test_name_extraction.py  test_score.py  test_smoke.py
contracts/: README.md  data-models.md  rest-api.md  websocket-events.md
dashboard/: .env.example  README.md  REVIEW.md  VERIFICATION.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
design/: README.md
infra/: README.md  docker-compose.dev.yml  tailscale.md
phone/: .env.d.ts  .env.example  .eslintrc.js  .gitignore  README.md  app.json  babel.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
(+141 files in other folders)
